--- a/back-end/src/main/resources/application.properties
+++ b/back-end/src/main/resources/application.properties
@@ -1,2 +1,20 @@
 spring.application.name=code
+server.port=8090
+
+spring.datasource.url=jdbc:mysql://localhost:3306/inventory?usessl=false
+spring.datasource.username=root
+
+spring.datasource.password=09121986
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.open-in-view=false
+
+spring.data.mongodb.uri=mongodb://localhost:27017/reviews
+
+management.endpoint.health.show-details=always
+management.health.db.enabled=true
+
+
 
